src/main/java/com/example/springforumapp/errors/ApiStatuses.java
package com.example.springforumapp.errors;

public enum ApiStatuses {
    SUCCESS,
    FAIL
}
